# VideoFrameLoader

./: settings.gradle
LibVideo/: build.gradle
LibVideo/include/libffmpeg/: config.h
LibVideo/src/androidTest/java/com/netvideo/libvideo/: ExampleInstrumentedTest.java
LibVideo/src/main/cpp/: CMakeLists.txt  VideoFrameLoader.cpp  VideoFrameLoader.h  logcat.h  native-lib.cpp
LibVideo/src/main/cpp/video/: Video2frame.cpp  Video2frame.h
LibVideo/src/main/java/com/netvideo/libvideo/: VideoFrameLoader.java
LibVideo/src/test/java/com/netvideo/libvideo/: ExampleUnitTest.java
app/: build.gradle
app/include/libavfilter/: avfilter.h
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_main.cpp  logcat.h  main.cpp
app/src/main/cpp/VideoLib/: Video2frame.cpp  Video2frame.h
app/src/main/java/com/example/testnative/: CppMain.java  FirstFragment.java  MainActivity.java  SecondFragment.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app2/: build.gradle
app2/src/androidTest/java/com/example/opengl_test/: ExampleInstrumentedTest.java
app2/src/main/: AndroidManifest.xml
app2/src/main/assets/: screen.frag  screen.vert  tri.frag  tri.vert
app2/src/main/res/values/: strings.xml  themes.xml
app2/src/main/res/values-night/: themes.xml
getTexture/: build.gradle
getTexture/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
